--- a/settings.gradle
+++ b/settings.gradle
@@ -7,7 +7,7 @@ pluginManagement {
     plugins {
         id 'com.android.application' version '7.1.2'
         id 'com.android.library' version '7.1.2'
-        id 'org.jetbrains.kotlin.android' version '1.5.21'
+        id 'org.jetbrains.kotlin.android' version '1.6.10'
     }
 }
 dependencyResolutionManagement {
@@ -19,3 +19,5 @@ dependencyResolutionManagement {
 }
 rootProject.name = "SerialPortDemo"
 include ':app'
+include ':serialportbase'
+include ':ledclock'
