--- a/ledclock/build.gradle
+++ b/ledclock/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    alias(libs.plugins.application)
+    alias(libs.plugins.kotlin)
 }
 
 def keystorePropertiesFile = rootProject.file("keystore.properties")
@@ -62,11 +62,11 @@ android {
 dependencies {
     implementation project(path: ':serialportbase')
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
-    implementation "com.jakewharton.timber:timber:5.0.1"
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation libs.androidx.core
+    implementation libs.kotlin.coroutines.android
+    implementation libs.timber
+
+    implementation libs.junit
+    androidTestImplementation libs.androidx.test.ext.junit
+    androidTestImplementation libs.androidx.test.espresso.core
 }
